# theGame

./: .gitignore  CMakeLists.txt  README.md
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
res/shaders/: main.glslf  main.glslv
src/: main.cpp
src/engine/: Camera.cpp  Camera.hpp  DevInterface.cpp  DevInterface.hpp  Events.cpp  Events.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
src/engine/loaders/: png_loader.hpp
